[package]
name = "bolt_core"
version = "0.11.11"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Build and test APIs"
homepage = "https://github.com/hiro-codes/bolt"
repository = "https://github.com/hiro-codes/bolt"
keywords = ["api", "cli"]
categories = ["command-line-utilities"]


[dependencies]
bolt_http = { path="../bolt_http"}
bolt_ws = { path="../bolt_ws" }

dirs = "4.0.0"